# DnDAI

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  pyproject.toml  todo.md
backend/: __init__.py
backend/app/: main.py
backend/app/api/: campaigns.py  characters.py  chat.py  combat.py  deps.py  dice.py  health.py  llm.py  memory.py  party.py  sessions.py
backend/app/core/: config.py
backend/app/db/: schema.sql  session.py
backend/app/prompts/: chat_response_contract.md  system_prompt.md
backend/app/schemas/: campaigns.py  characters.py  chat.py  combat.py  common.py  dice.py  memory.py  sessions.py
backend/app/services/: action_service.py  campaign_service.py  character_service.py  chat_orchestrator.py  combat_service.py  dice_service.py  inventory_service.py  llm_client.py  memory_service.py  party_service.py  prompt_assembler.py  quest_service.py  rules_service.py  session_service.py  utils.py
backend/app/tools/: __init__.py  import_rules.py
backend/tests/integration/: test_action_service.py  test_action_validation.py  test_attack_roll_action.py  test_character_update.py  test_chat_combat_actions.py  test_chat_orchestrator.py  test_combat_service.py  test_llm_health_endpoint.py
backend/tests/unit/: test_dice_service.py
data/rules/processed/: srd_5_2_1_chunks.jsonl
data/rules/traceability/: rule_traceability_registry.json
docs/: RULE_TRACEABILITY.md
scripts/: rules_chunk_markdown.py  validate_rules_jsonl.py
